--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
     <div class="container">
         <div class="top">
-            <label class="name">Player:</label>
-            <input class="input" placeholder="Enter Your Name" type="text">
+            <label class="name">Player 1:</label>
+            <input id="player1-input" class="input" placeholder="Enter Your Name" type="text">
+            <label class="name">Player 2:</label>
+            <input id="player2-input" class="input" placeholder="Enter Your Name or leave empty to play against computer" type="text">
             <button id="btn-start" class="start">Start</button>
             <button id="btn-reset" class="reset">Reset</button>
         </div>
@@ -30,7 +32,6 @@
             <div class="cell"></div>
             <div class="cell"></div>
         </div>
-
     </div>
 </body>
 </html>
